# ChangeLog for net-libs/polarssl
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/polarssl/ChangeLog,v 1.73 2014/04/19 14:59:51 hasufell Exp $

*polarssl-1.3.6 (19 Apr 2014)

  19 Apr 2014; Julian Ospald <hasufell@gentoo.org> +polarssl-1.3.6.ebuild:
  version bump

  18 Apr 2014; Markus Meier <maekke@gentoo.org> polarssl-1.3.4.ebuild:
  arm stable, bug #506918

  06 Apr 2014; Jeroen Roovers <jer@gentoo.org> polarssl-1.3.4.ebuild:
  Stable for HPPA (bug #506918).

*polarssl-1.3.5 (27 Mar 2014)

  27 Mar 2014; Julian Ospald <hasufell@gentoo.org> +polarssl-1.3.5.ebuild,
  metadata.xml:
  version bump, add SUBSLOT

  15 Mar 2014; Julian Ospald <hasufell@gentoo.org> polarssl-1.3.4.ebuild:
  install docs

*polarssl-1.3.4 (11 Mar 2014)

  11 Mar 2014; Julian Ospald <hasufell@gentoo.org> +polarssl-1.3.4.ebuild,
  +files/polarssl-1.3.4-cflags.patch,
  +files/polarssl-1.3.4-out-of-source.patch,
  +files/polarssl-1.3.4-static.patch, +files/polarssl-1.3.4-zlib.patch,
  metadata.xml:
  version bump wrt #503562, add myself as maintainer

  02 Nov 2013; Markos Chandras <hwoarang@gentoo.org> polarssl-1.3.0.ebuild:
  Add ~mips

  14 Oct 2013; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -polarssl-1.2.8.ebuild:
  Drop old

  14 Oct 2013; Agostino Sarubbo <ago@gentoo.org> polarssl-1.3.0.ebuild:
  Stable for ppc, wrt bug #487170

  13 Oct 2013; Jeroen Roovers <jer@gentoo.org> polarssl-1.3.0.ebuild:
  Stable for HPPA (bug #487170).

  13 Oct 2013; Agostino Sarubbo <ago@gentoo.org> polarssl-1.3.0.ebuild:
  Stable for x86, wrt bug #487170

  13 Oct 2013; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  polarssl-1.3.0.ebuild:
  Fix zlib support in tests, bug 487432

  09 Oct 2013; Agostino Sarubbo <ago@gentoo.org> polarssl-1.3.0.ebuild:
  Stable for sparc, wrt bug #487170

  09 Oct 2013; Agostino Sarubbo <ago@gentoo.org> polarssl-1.3.0.ebuild:
  Stable for ppc64, wrt bug #487170
