@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/polarssl
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/polarssl/ChangeLog,v 1.73 2014/04/19 14:59:51 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/polarssl/ChangeLog,v 1.74 2014/05/12 14:27:36 hasufell Exp $
+
+*polarssl-1.3.7 (12 May 2014)
+
+  12 May 2014; Julian Ospald <hasufell@gentoo.org> +polarssl-1.3.7.ebuild:
+  version bump
 
 *polarssl-1.3.6 (19 Apr 2014)
 
